# rta

./: .gitignore  README.md  electron-builder.json5  index.html  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.node.json
.github/workflows/: deploy.yml
electron/: main.ts  preload.ts
scripts/: electron-build.mjs  electron-dev.mjs  electron-preview.mjs
src/: App.vue  env.d.ts
src/assets/: style.css
src/components/: AudioPlayerControls.vue  LyricsPanel.vue  PlayerBar.vue  PlaylistPanel.vue  RtaCanvas.vue  SpectrogramCanvas.vue  SpectrogramControls.vue  VolumeSlider.vue
src/composables/: useAudioRta.ts
src/types/: playlist.ts  rta.ts
src/utils/: canvasResize.ts  metadataParser.ts  metadataWasmLoader.ts  rtaProcessor.ts  rtaRender.ts  spectrogramRender.ts
wasm/metadata/: Cargo.toml
wasm/metadata/src/: lib.rs
