[package]
name = "rta-metadata-wasm"
version = "0.1.0"
edition = "2024"
publish = false
description = "WASM metadata parser for FLAC and MP3"
license = "MIT"
repository = "https://github.com/p0slx/rta"



[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = "symbols"
